scroll overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,8 @@
 /************************************************************/
 
 html {
-    box-sizing: border-box;
-    font-size:  62.5%;
+    box-sizing:      border-box;
+    font-size:       62.5%;
     scroll-behavior: smooth;
 }
 
@@ -86,17 +86,7 @@ body#main {
 
 .space {
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.4);
-    width: 100%;
-}
-
-
-/*****************************************************************/
-/************************* Main Parallax *************************/
-/*****************************************************************/
-
-main#stars {
-    /* overflow: hidden; */
+    width:  100%;
 }
 
 
@@ -144,7 +134,7 @@ nav.upper-navbar {
     max-width: 0;
     opacity:   0;
     overflow:  hidden;
-    transition: all ease-in-out 1.2s;
+    transition: opacity ease-in-out 0.4s, max-width ease-in-out 1.2s;
 }
 
 .odes-navbar:hover .odes-navbar__word {
@@ -375,12 +365,13 @@ nav.upper-navbar {
     width:           100%;
 }
 
-
 .parallax h2,
 .no-parallax h2 {
+    animation:           titles 2s infinite;
     color:               var(--main-background-two);
     font-size:           4.8rem;
     position:            absolute;
+    text-align:          center;
     text-shadow:         0rem 0.4rem 0.8rem var(--main-background-one);
     z-index:             250;
     -webkit-text-stroke: 2px var(--star-white);
@@ -388,58 +379,81 @@ nav.upper-navbar {
 
 .parallax h3,
 .no-parallax h3 {
-    font-size: 4rem;
+    font-size:  4rem;
+    text-align: center;
+}
+
+@keyframes titles {
+    0% {
+        color:       var(--main-background-two);
+        text-shadow: 0rem 0.4rem 0.8rem var(--main-background-one);
+    }
+    
+    10% {
+        color:       var(--main-background-one);
+        text-shadow: 0rem 0.4rem 0.8rem var(--main-white);
+    }
+
+    50% {
+        color:       var(--main-white);
+        text-shadow: 0rem 0.4rem 0.8rem var(--star-white);
+    }
+
+    90% {
+        color:       var(--main-background-one);
+        text-shadow: 0rem 0.4rem 0.8rem var(--main-white);
+    }
+    
+    100% {
+        color:       var(--main-background-two);
+        text-shadow: 0rem 0.4rem 0.8rem var(--main-background-one);
+    }
 }
 
 .parallax {
-    position: absolute;
-    margin: 0 auto;
-    width:  100%;
-    bottom: 20vh;
-    left: 0;
-    right: 0;
-    align-items: center;
-    display: flex;
-    flex-direction: column-reverse;
+    align-items:     center;
+    bottom:          20vh;
+    display:         flex;
+    flex-direction:  column-reverse;
     justify-content: center;
-    z-index: 1000;
+    left:            0;
+    margin:          0 auto;
+    position:        absolute;
+    right:           0;
+    width:           100%;
+    z-index:         1000;
 }
 
 .parallax-box {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+    align-items:     center;
+    display:         flex;
+    flex-direction:  column;
+    height:          100vh;
     justify-content: center;
-    margin: 0 0 100vh 0;
-    width: 100%;
-
+    margin:          0 0 100vh 0;
+    width:           100%;
 }
 
 .parallax-box__content {
-
-    color: white;
+    animation:        light-box 1s infinite;
     backdrop-filter:  blur(0.8rem);
     background-color: rgba(255, 255, 255, 0.2);
-    padding: 4rem;
-    border-radius: 0.5rem;
-    min-height: 80vh;
-    width:  80%;
-    max-width: 120rem;
-    animation: light-box 1s infinite;
-    box-shadow: 0rem 0.5rem 1rem var(--main-transparentWhite);
-    border: solid 0.1rem var(--main-transparentWhite);
+    border:           solid 0.1rem var(--main-transparentWhite);
+    border-radius:    0.5rem;
+    box-shadow:       0rem 0.5rem 1rem var(--main-transparentWhite);
+    color:            var(--main-white);
+    max-width:        120rem;
+    min-height:       80vh;
+    padding:          4rem;
+    width:            80%;
 }
 
-
 .parallax__planet {
+    left:     -800px;
     position: absolute;
-    top: -1200px; 
-    left: -800px;
-    z-index: 200;
-    width: 140vw;
-    
-
+    top:      -1200px; 
+    width:    140vw;
+    z-index:  200;
 }
 
 .parallax__planet img {
@@ -448,17 +462,17 @@ nav.upper-navbar {
 
 @keyframes light-box {
     0% {
+        border:     solid 0.1rem var(--main-transparentWhite);
         box-shadow: 0rem 0.5rem 1rem var(--main-transparentWhite);
-        border: solid 0.1rem var(--main-transparentWhite);
     }
     
     50% {
+        border:     solid 0.1rem var(--second-transparentWhite);
         box-shadow: 0rem 0.5rem 1rem var(--second-transparentWhite);
-        border: solid 0.1rem var(--second-transparentWhite);
     }
     
     100% {
+        border:     solid 0.1rem var(--main-transparentWhite);
         box-shadow: 0rem 0.5rem 1rem var(--main-transparentWhite);
-        border: solid 0.1rem var(--main-transparentWhite);
     }
 }
